Add AI-powered migration recommendations and enhance installer (v2.0)
This major feature release adds AI-powered migration recommendations and
significantly enhances the user experience with an improved installer and UI.

AI-Powered Migration Recommendations
=====================================
- Multiple AI provider support: OpenAI (GPT-4), Anthropic (Claude), Ollama (local LLM)
- Configurable analysis time periods: 1 hour, 6 hours, 24 hours, 7 days
- Context-aware recommendations analyzing historical trends and workload patterns
- Smart filtering to prevent hallucinated nodes and self-migrations
- Detailed reasoning explanations for each recommendation
- Web UI integration for easy AI provider configuration

Core Features
=============
- New ai_provider.py module with provider abstraction layer
- REST API endpoint: POST /api/ai-recommendations
- AI configuration in settings panel with dropdown provider selection
- Support for cost-free local LLMs via Ollama
- Time period selector for historical analysis scope

Enhanced Installer v2.0
=======================
- Beautiful visual interface with colors and ASCII art
- Real-time progress tracking with spinning status indicators (braille characters)
- Detailed dependency installation progress (4 separate steps)
- Smart initial data collection with progress monitoring (3 retry attempts, 60s timeout)
- Enhanced error messages and validation
- Improved user prompts with better formatting
- Version bumped to v2.0 with prominent branding

UI/UX Improvements
==================
- Larger ProxBalance logo (96px) in dashboard header
- GitHub icon and repository link integration
- Settings icon repositioned to top-right corner
- Collapsible sections for Node Status and Tagged Guests (collapsed by default)
- Mini status view when sections are collapsed
- CPU/Memory threshold sliders integrated into node charts as visual lines
- Enhanced chart rendering with period selectors
- Improved grid layout options for node status (1-4 column

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@ instance/
 .webassets-cache
 
 # Cache files
+cache.json
 cluster_cache.json
 cluster_cache.json.tmp
+dev-cache/cache.json
 
 # IDE
 .vscode/
@@ -33,12 +35,9 @@ cluster_cache.json.tmp
 *.log.*
 
 # Configuration (with sensitive data)
+config.json
 config.local.json
-
-# SSH keys
-*.pub
-id_*
-known_hosts
+dev-cache/config.json
 
 # Backup files
 *.backup
