--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,28 @@
 {
   "collection_interval_minutes": 60,
   "ui_refresh_interval_minutes": 15,
-  "proxmox_host": "CHANGE_ME",
-  "_comment": "IMPORTANT: Replace 'CHANGE_ME' with the IP or hostname of your primary Proxmox node"
+  "proxmox_host": "10.0.0.3",
+  "proxmox_port": 8006,
+  "proxmox_auth_method": "api_token",
+  "proxmox_api_token_id": "root@pam!proxbalance",
+  "proxmox_api_token_secret": "",
+  "proxmox_username": "root@pam",
+  "proxmox_password": "",
+  "proxmox_verify_ssl": false,
+  "ai_provider": "none",
+  "ai_recommendations_enabled": false,
+  "ai_config": {
+    "openai": {
+      "api_key": "",
+      "model": "gpt-4"
+    },
+    "anthropic": {
+      "api_key": "",
+      "model": "claude-3-5-sonnet-20241022"
+    },
+    "local": {
+      "base_url": "http://localhost:11434",
+      "model": "llama2"
+    }
+  }
 }
