--- a/systemd/proxmox-collector.service
+++ b/systemd/proxmox-collector.service
@@ -7,6 +7,7 @@ Type=oneshot
 User=root
 WorkingDirectory=/opt/proxmox-balance-manager
 Environment="PATH=/opt/proxmox-balance-manager/venv/bin"
-ExecStart=/opt/proxmox-balance-manager/venv/bin/python3 /opt/proxmox-balance-manager/collector.py
+# Try API-based collector first, fall back to SSH-based if not available
+ExecStart=/bin/bash -c 'if [ -f /opt/proxmox-balance-manager/collector_api.py ]; then /opt/proxmox-balance-manager/venv/bin/python3 /opt/proxmox-balance-manager/collector_api.py; else /opt/proxmox-balance-manager/venv/bin/python3 /opt/proxmox-balance-manager/collector.py; fi'
 StandardOutput=journal
 StandardError=journal
