--- a/config.example.json
+++ b/config.example.json
@@ -14,11 +14,11 @@
   "ai_config": {
     "openai": {
       "api_key": "",
-      "model": "gpt-4"
+      "model": "gpt-4o"
     },
     "anthropic": {
       "api_key": "",
-      "model": "claude-3-5-sonnet-20241022"
+      "model": "claude-sonnet-4-5-20250929"
     },
     "local": {
       "base_url": "http://localhost:11434",
