Update local LLM default from llama2 to llama3.1:8b
- Replace outdated llama2 with llama3.1:8b (better JSON support)
- Add recommendations for qwen2.5:7b and mistral:7b as alternatives
- Update documentation with better model choices
- Llama3.1 provides much better structured output for recommendations

--- a/config.example.json
+++ b/config.example.json
@@ -22,7 +22,7 @@
     },
     "local": {
       "base_url": "http://localhost:11434",
-      "model": "llama2"
+      "model": "llama3.1:8b"
     }
   }
 }
