--- a/config.example.json
+++ b/config.example.json
@@ -4,9 +4,9 @@
   "proxmox_host": "10.0.0.3",
   "proxmox_port": 8006,
   "proxmox_auth_method": "api_token",
-  "proxmox_api_token_id": "root@pam!proxbalance",
+  "proxmox_api_token_id": "proxbalance@pam!proxbalance",
   "proxmox_api_token_secret": "",
-  "proxmox_username": "root@pam",
+  "proxmox_username": "proxbalance@pam",
   "proxmox_password": "",
   "proxmox_verify_ssl": false,
   "ai_provider": "none",
