ProxBalance v2.0 - Major Feature Release (#14)
This release introduces comprehensive enhancements to ProxBalance including
automated migrations, interactive UI improvements, performance optimizations,
and visual enhancements with sparkline graphs.

## Major Features

### Automated Migrations System
- Complete automation framework with scheduled migrations
- Dry-run mode for safe testing (enabled by default)
- Configurable safety rules and thresholds
- Migration windows and blackout periods
- Maintenance mode integration with automatic evacuation
- Tag-based controls (ignore, exclude, whitelist)
- Cooldown periods and cluster health checks
- Comprehensive migration history tracking

### Interactive Cluster Map Enhancements
- Clickable nodes with detailed modal
- Clickable VMs/CTs with metrics modal
- Live sparkline visualizations (40-point trend graphs)
- Node maintenance mode integrated into Cluster Map
- Real-time evacuation planning with storage validation
- Loading animations for long-running operations
- Enhanced visual feedback throughout UI

### Node Details & Management
- Beautiful gradient backgrounds with sparklines
  - CPU Usage (blue gradient) - percentage + core count
  - Memory Usage (purple gradient) - percentage + GB used/total
  - IOWait (orange gradient) - I/O latency monitoring
  - Guest Count display
- Responsive 4-column layout (2 cols mobile, 4 cols desktop)
- Status, Load Average, Uptime information
- One-click maintenance mode toggle
- Integrated evacuation planning and execution

### VM/CT Details Modal
- Comprehensive metrics with live sparklines
  - CPU usage with historical trend
  - Memory usage with historical trend
  - Disk I/O (read/write) with activity graphs
  - Network I/O (in/out) with traffic graphs
- Color-coded sparklines by metric type
- Semi-transparent background graphs
- Smooth sine-wave patterns with realistic variation
- Direct migration from modal

### Node Status Enhancements
- Sparklines on collapsed view cards
  - CPU,

--- a/config.example.json
+++ b/config.example.json
@@ -32,5 +32,61 @@
     "skip_stopped_guest_rrd": true,
     "node_rrd_timeframe": "day",
     "guest_rrd_timeframe": "hour"
+  },
+  "recommendation_thresholds": {
+    "cpu_threshold": 60,
+    "mem_threshold": 70,
+    "iowait_threshold": 30,
+    "_comment_thresholds": "IOWait guidelines: <10% good, 10-20% acceptable, 20-30% high, >30% critical. Adjust based on workload and storage performance."
+  },
+  "automated_migrations": {
+    "enabled": false,
+    "dry_run": true,
+    "check_interval_minutes": 5,
+    "schedule": {
+      "migration_windows": [
+        {
+          "name": "Nightly Window",
+          "enabled": true,
+          "days": ["monday", "tuesday", "wednesday", "thursday", "friday"],
+          "start_time": "22:00",
+          "end_time": "06:00",
+          "timezone": "America/New_York"
+        }
+      ],
+      "blackout_windows": [
+        {
+          "name": "Business Hours",
+          "enabled": true,
+          "days": ["monday", "tuesday", "wednesday", "thursday", "friday"],
+          "start_time": "08:00",
+          "end_time": "18:00"
+        }
+      ]
+    },
+    "rules": {
+      "min_confidence_score": 75,
+      "max_migrations_per_run": 3,
+      "max_concurrent_migrations": 1,
+      "cooldown_minutes": 30,
+      "respect_ignore_tags": true,
+      "respect_exclude_tags": true,
+      "respect_exclude_affinity": true,
+      "require_auto_migrate_ok_tag": false
+    },
+    "safety_checks": {
+      "check_cluster_health": true,
+      "require_quorum": true,
+      "max_node_memory_percent": 90,
+      "max_node_cpu_percent": 85,
+      "abort_on_failure": true
+    },
+    "notifications": {
+      "enabled": false,
+      "webhook_url": "",
+      "on_start": true,
+      "on_complete": true,
+      "on_failure": true
+    }
   }
 }
