Add automated migration improvements
- Add migration statistics (24h/7d) with success rates
- Add cooldown tracking to prevent duplicate migrations
- Fix UTC timestamp parsing for relative time display
- Improve automation status display with visual indicators
- Add UI deduplication for recent migrations list

Add countdown timer and improve dry run statistics display

- Add live countdown timer showing time until next automation check
- Update every second with "in Xm Ys" format
- Show "Overdue" if past due, "Not scheduled" if inactive
- Change dry run statistics text to yellow (matching DRY RUN MODE badge)
- Fix systemctl path in app.py to use absolute path /usr/bin/systemctl
- Separate real and dry run migration colors in statistics cards

Add mini stats to collapsed Automated Migrations header

- Show migration count and success rate when card is collapsed
- Display stats to the left of Configure button
- Include DRY RUN indicator when in dry run mode
- Color-coded success rate (green ≥90%, yellow ≥70%, red <70%)

Implement Run Now button functionality and fix timer reset

- Add /api/automigrate/run endpoint to manually trigger automation
- Add runAutomationNow() function with loading state and spinner
- Remove browser popup alerts, use console logging instead
- Update last_run timestamp in finally block to ensure it always runs
- Fix View History button to expand section and scroll to history
- Add History and Pause icon definitions
- Double status refresh (immediate + 1 second delay) for reliability

Relocate Run Now button to Next Check card

Moved the Run Now button from a separate quick actions section to be
right-aligned within the Next Check card header for better space
efficiency and contextual placement. Changed button color to green to
better indicate an action/execute button.

Optimize data collection refresh polling performance

Reduced polling interval from 2 seconds to 500ms for the first 10 checks,
then 1 second thereafter. This allows the UI to d

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ cluster_cache.json
 cluster_cache.json.tmp
 dev-cache/cache.json
 
+# Runtime state files
+migration_history.json
+automigrate.lock
+
 # IDE
 .vscode/
 .idea/
