Fix PATH environment for UI update subprocess calls
Root cause: systemd service had PATH=/opt/proxmox-balance-manager/venv/bin
which excluded system binaries like curl, apt-get, etc.

Fixes:
- Add full system PATH to proxmox-balance.service
- Add curl installation checks to post_update.sh and update.sh
- Ensures UI-triggered updates can download Node.js and build frontend

This resolves 'curl: command not found' errors during UI updates.

--- a/systemd/proxmox-balance.service
+++ b/systemd/proxmox-balance.service
@@ -6,7 +6,7 @@ After=network.target
 Type=notify
 User=root
 WorkingDirectory=/opt/proxmox-balance-manager
-Environment="PATH=/opt/proxmox-balance-manager/venv/bin"
+Environment="PATH=/opt/proxmox-balance-manager/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ExecStart=/opt/proxmox-balance-manager/venv/bin/gunicorn \
     --workers 2 \
     --timeout 600 \
