Fix web UI update process and add documentation
Resolved service restart conflicts and timeout issues:
- Remove service restart from post_update.sh to prevent self-restart deadlock
- API service uses non-blocking restart after update completion
- Increase collector timer restart timeout from 5s to 15s
- Fix SIGTERM (-15) errors during build process
- Add git stash --include-untracked to handle permission changes and build artifacts

Added update documentation:
- UPDATE_FROM_OLD_VERSION.md: User guide with multiple update methods
- TESTING_UPDATE_COMPATIBILITY.md: Developer testing procedures
- Add frontend build artifacts to .gitignore

Ensures smooth updates from any version with proper error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,10 @@ Thumbs.db
 .cache/
 AUTOMATION_PLAN.md
 FRONTEND_BUILD.md
+
+# Frontend build artifacts
+node_modules/
+package-lock.json
+package.json
+.babelrc
+assets/js/app.js
